@@ -172,63 +172,21 @@ class Groups_Admin_Welcome {
 		_e( 'We have made it even easier to protect your content!', 'groups' );
 		echo ' ';
 		_e( 'Now you can protect your posts, pages and any other custom post type like products or events by simply assigning them to one or more groups.', 'groups' );
-		echo ' ';
-		_e( 'Previously we used capabilities to do that, but changing to this new model makes things even easier.', 'groups' );
 		echo '</p>';
 
 		echo '<h3>';
-		_e( 'Improved User Interface', 'groups' );
+		_e( 'Efficient User Interface', 'groups' );
 		echo '</h3>';
 		echo '<p>';
-		_e( 'Now you can assign new users directly to groups when you create a new user account from the Dashboard.', 'groups' );
-		echo ' ';
-		_e( 'Another improvement is better filtering by groups and a reduced footprint on the Users admin screen.', 'groups' );
-		echo ' ';
-		_e( 'And you can now filter the list of users by one or multiple groups with one convenient field.', 'groups' );
+		_e( 'Manage groups and users with a minimal footprint on the administrative screens.', 'groups' );
 		echo '</p>';
 
 		echo '<h3>';
-		_e( 'New Documentation', 'groups' );
+		_e( 'Documentation', 'groups' );
 		echo '</h3>';
 		echo '<p>';
 		_e( 'Whether you are new to Groups or have been using it before, please make sure to visit the <a target="_blank" href="https://docs.itthinx.com/document/groups/">Documentation</a> pages to know more about how to use it.', 'groups' );
 		echo '</p>';
-
-		$legacy_enabled = Groups_Options::get_option( GROUPS_LEGACY_ENABLE );
-		echo '<h2>';
-		printf( esc_html__( 'Switching to Groups %s', 'groups' ), esc_html( $groups_version ) );
-		echo '</h2>';
-		echo '<p>';
-		printf( esc_html__( 'Groups %s features a simpler model for access restrictions based on groups instead of capabilities used in previous versions.', 'groups' ), esc_html( $groups_version ) );
-		echo ' ';
-		_e( 'To put it simple, previously you would have used capabilities to restrict access to posts and now you simply use groups.', 'groups' );
-		echo ' ';
-		_e( 'To make it easier to transition to the new model for those who migrate from a previous version, we have included legacy access control based on capabilities.', 'groups' );
-		echo '</p>';
-		echo '<div class="indent">';
-		echo '<p>';
-		_e( 'The following is only of interest if you have upgraded from Groups 1.x:', 'groups' );
-		echo '<br/>';
-		if ( $legacy_enabled ) {
-			_e( 'You are running the system with legacy access control based on capabilities enabled.', 'groups' );
-			echo ' ';
-			_e( 'This means that if you had access restrictions in place that were based on capabilities, your entries will still be protected.', 'groups' );
-		} else {
-			_e( 'You are running the system with legacy access control based on capabilities disabled.', 'groups' );
-			echo ' ';
-			_e( 'This could be important!', 'groups' );
-			echo ' ';
-			_e( 'If you had any access restrictions in place based on capabilities, the entries will now be unprotected, unless you enable legacy access restrictions or place appropriate access restrictions based on groups on the desired entries.', 'groups' );
-		}
-		echo '</p>';
-		echo '<p>';
-		_e( 'If you would like to switch to access restrictions based on groups (recommended) instead of capabilities, you can easily do so by setting the appropriate groups on your protected posts, pages and other entries to restrict access.', 'groups' );
-		echo ' ';
-		_e( 'Once you have adjusted your access restrictions based on groups, you can disable legacy access control.', 'groups' );
-		echo ' ';
-		_e( 'Please refer to the <a target="_blank" href="https://docs.itthinx.com/document/groups/">Documentation</a> for details on how to switch to and use the new access restrictions.', 'groups' );
-		echo '</p>';
-		echo '</div>'; // .indent
 
 		echo '<h2>';
 		_e( 'Add-Ons', 'groups' );
