@@ -79,12 +79,14 @@ define( 'GROUPS_ADMIN_GROUPS_NONCE', 'groups-admin-nonce' );
 
 /**
  * @var string admin override option
+ *
  * @deprecated since 2.1.1
  */
 define( 'GROUPS_ADMINISTRATOR_ACCESS_OVERRIDE', 'groups-admin-override' );
 
 /**
  * @var string admin override option default setting
+ *
  * @deprecated since 2.1.1
  */
 define( 'GROUPS_ADMINISTRATOR_ACCESS_OVERRIDE_DEFAULT', false );
@@ -96,36 +98,42 @@ define( 'GROUPS_READ_POST_CAPABILITIES', 'groups-read-post-capabilities' );
 
 /**
  * Tree view option
+ *
  * @var string
  */
 define( 'GROUPS_SHOW_TREE_VIEW', 'groups-show-tree-view' );
 
 /**
 * Tree view option default.
+*
 * @var boolean
 */
 define( 'GROUPS_SHOW_TREE_VIEW_DEFAULT', false );
 
 /**
  * Option to show groups info in the user profile.
+ *
  * @var string
  */
 define( 'GROUPS_SHOW_IN_USER_PROFILE', 'groups-show-in-user-profile' );
 
 /**
  * Default for showing groups in user profiles.
+ *
  * @var boolean
  */
-define( 'GROUPS_SHOW_IN_USER_PROFILE_DEFAULT', false );
+define( 'GROUPS_SHOW_IN_USER_PROFILE_DEFAULT', true );
 
 /**
  * Whether legacy functions should be supported.
+ *
  * @var string
  */
 define( 'GROUPS_LEGACY_ENABLE', 'groups-legacy-enable' );
 
 /**
  * Default value for legacy support.
+ *
  * @var boolean
  */
 define( 'GROUPS_LEGACY_ENABLE_DEFAULT', false );
